--- a/index.asciidoc
+++ b/index.asciidoc
@@ -10,212 +10,212 @@ C-Helper
 :lang: en
 :encoding: utf-8
 
-About & Overview 
+About & Overview
 ----------------
-include::002_about.asciidoc[] +
-include::005_ansi-c.asciidoc[]
+link:002_about.asciidoc[]
+link:005_ansi-c.asciidoc[]
 
 assert.h
 --------
-include::010_assert.asciidoc[] 
+link:010_assert.asciidoc[]
 
 ctype.h
 -------
-include::020_isalnum.asciidoc[] +
-include::021_isalpha.asciidoc[] +
-include::022_iscntrl.asciidoc[] +
-include::023_isdigit.asciidoc[] +
-include::024_isgraph.asciidoc[] +
-include::025_islower.asciidoc[] +
-include::026_isprint.asciidoc[] +
-include::027_ispunct.asciidoc[] +
-include::028_isspace.asciidoc[] +
-include::029_isupper.asciidoc[] +
-include::030_isxdigit.asciidoc[] +
-include::031_tolower.asciidoc[] +
-include::033_toupper.asciidoc[] 
+link:020_isalnum.asciidoc[]
+link:021_isalpha.asciidoc[]
+link:022_iscntrl.asciidoc[]
+link:023_isdigit.asciidoc[]
+link:024_isgraph.asciidoc[]
+link:025_islower.asciidoc[]
+link:026_isprint.asciidoc[]
+link:027_ispunct.asciidoc[]
+link:028_isspace.asciidoc[]
+link:029_isupper.asciidoc[]
+link:030_isxdigit.asciidoc[]
+link:031_tolower.asciidoc[]
+link:033_toupper.asciidoc[]
 
 errno.h
 -------
-include::040_errno.asciidoc[]
+link:040_errno.asciidoc[]
 
 floats.h
 --------
-include::050_float.asciidoc[]
+link:050_float.asciidoc[]
 
 
 limits.h
 --------
-include::060_limits.asciidoc[]
+link:060_limits.asciidoc[]
 
 locale.h
 --------
-include::070_setlocale.asciidoc[]
+link:070_setlocale.asciidoc[]
 
 math.h
 ------
-include::080_acos.asciidoc[] +
-include::081_asin.asciidoc[] +
-include::082_atan.asciidoc[] +
-include::083_atan2.asciidoc[] +
-include::084_ceil.asciidoc[] +
-include::085_cos.asciidoc[] +
-include::086_cosh.asciidoc[] +
-include::087_exp.asciidoc[] +
-include::088_fabs.asciidoc[] +
-include::089_floor.asciidoc[] +
-include::090_fmod.asciidoc[] +
-include::091_frexp.asciidoc[] +
-include::092_ldexp.asciidoc[] +
-include::093_log.asciidoc[] +
-include::094_log10.asciidoc[] +
-include::095_modf.asciidoc[] +
-include::096_pow.asciidoc[] +
-include::097_sin.asciidoc[] +
-include::098_sinh.asciidoc[] +
-include::099_sqrt.asciidoc[] +
-include::100_tan.asciidoc[] +
-include::101_tanh.asciidoc[] 
+link:080_acos.asciidoc[]
+link:081_asin.asciidoc[]
+link:082_atan.asciidoc[]
+link:083_atan2.asciidoc[]
+link:084_ceil.asciidoc[]
+link:085_cos.asciidoc[]
+link:086_cosh.asciidoc[]
+link:087_exp.asciidoc[]
+link:088_fabs.asciidoc[]
+link:089_floor.asciidoc[]
+link:090_fmod.asciidoc[]
+link:091_frexp.asciidoc[]
+link:092_ldexp.asciidoc[]
+link:093_log.asciidoc[]
+link:094_log10.asciidoc[]
+link:095_modf.asciidoc[]
+link:096_pow.asciidoc[]
+link:097_sin.asciidoc[]
+link:098_sinh.asciidoc[]
+link:099_sqrt.asciidoc[]
+link:100_tan.asciidoc[]
+link:101_tanh.asciidoc[]
 
 setjmp.h
 --------
-include::120_longjmp.asciidoc[] +
-include::121_setjmp.asciidoc[] +
+link:120_longjmp.asciidoc[]
+link:121_setjmp.asciidoc[]
 
 
 signal.h
 --------
-include::130_signal.asciidoc[] +
-include::131_raise.asciidoc[] +
+link:130_signal.asciidoc[]
+link:131_raise.asciidoc[]
 
 
 stdarg.h
 --------
-include::140_stdarg.asciidoc[] 
+link:140_stdarg.asciidoc[]
 
 
 stddef.h
 --------
-include::150_stddef.asciidoc[]
+link:150_stddef.asciidoc[]
 
 
 stdio.h
 -------
-include::159_stdio_summary.asciidoc[] +
-include::160_clearerr.asciidoc[] +
-include::161_fclose.asciidoc[] +
-include::162_feof.asciidoc[] +
-include::162_ferror.asciidoc[] +
-include::163_fflush.asciidoc[] +
-include::164_fgetc.asciidoc[] +
-include::165_fgetpos.asciidoc[] +
-include::166_fgets.asciidoc[] +
-include::167_fopen.asciidoc[] +
-include::168_fprintf.asciidoc[] +
-include::169_fputc.asciidoc[] +
-include::170_fputchar.asciidoc[] +
-include::171_fputs.asciidoc[] +
-include::172_fread.asciidoc[] +
-include::173_freopen.asciidoc[] +
-include::174_fscanf.asciidoc[] +
-include::175_fseek.asciidoc[] +
-include::176_fsetpos.asciidoc[] +
-include::177_ftell.asciidoc[] +
-include::178_fwrite.asciidoc[] +
-include::179_getc.asciidoc[] +
-include::180_getchar.asciidoc[] +
-include::181_perror.asciidoc[] +
-include::182_printf.asciidoc[] +
-include::183_putc.asciidoc[] +
-include::184_putchar.asciidoc[] +
-include::185_puts.asciidoc[] +
-include::186_remove.asciidoc[] +
-include::187_rename.asciidoc[] +
-include::188_rewind.asciidoc[] +
-include::189_scanf.asciidoc[] +
-include::190_setbuf.asciidoc[] +
-include::191_setvbuf.asciidoc[] +
-include::192_sprintf.asciidoc[] +
-include::193_snprintf.asciidoc[] +
-include::193_sscanf.asciidoc[] +
-include::194_tmpfile.asciidoc[] +
-include::195_tmpnam.asciidoc[] +
-include::196_ungetc.asciidoc[] +
-include::197_vfprintf.asciidoc[] +
-include::198_vprintf.asciidoc[] +
-include::199_vsnprintf.asciidoc[] +
-include::200_vsprintf.asciidoc[] +
-include::201_vfscanf.asciidoc[] +
-include::202_vscanf.asciidoc[] +
-include::203_vsscanf.asciidoc[] +
+link:159_stdio_summary.asciidoc[]
+link:160_clearerr.asciidoc[]
+link:161_fclose.asciidoc[]
+link:162_feof.asciidoc[]
+link:162_ferror.asciidoc[]
+link:163_fflush.asciidoc[]
+link:164_fgetc.asciidoc[]
+link:165_fgetpos.asciidoc[]
+link:166_fgets.asciidoc[]
+link:167_fopen.asciidoc[]
+link:168_fprintf.asciidoc[]
+link:169_fputc.asciidoc[]
+link:170_fputchar.asciidoc[]
+link:171_fputs.asciidoc[]
+link:172_fread.asciidoc[]
+link:173_freopen.asciidoc[]
+link:174_fscanf.asciidoc[]
+link:175_fseek.asciidoc[]
+link:176_fsetpos.asciidoc[]
+link:177_ftell.asciidoc[]
+link:178_fwrite.asciidoc[]
+link:179_getc.asciidoc[]
+link:180_getchar.asciidoc[]
+link:181_perror.asciidoc[]
+link:182_printf.asciidoc[]
+link:183_putc.asciidoc[]
+link:184_putchar.asciidoc[]
+link:185_puts.asciidoc[]
+link:186_remove.asciidoc[]
+link:187_rename.asciidoc[]
+link:188_rewind.asciidoc[]
+link:189_scanf.asciidoc[]
+link:190_setbuf.asciidoc[]
+link:191_setvbuf.asciidoc[]
+link:192_sprintf.asciidoc[]
+link:193_snprintf.asciidoc[]
+link:193_sscanf.asciidoc[]
+link:194_tmpfile.asciidoc[]
+link:195_tmpnam.asciidoc[]
+link:196_ungetc.asciidoc[]
+link:197_vfprintf.asciidoc[]
+link:198_vprintf.asciidoc[]
+link:199_vsnprintf.asciidoc[]
+link:200_vsprintf.asciidoc[]
+link:201_vfscanf.asciidoc[]
+link:202_vscanf.asciidoc[]
+link:203_vsscanf.asciidoc[]
 
 stdlib.h
 --------
-include::249_stdlib_summary.asciidoc[] +
-include::250_abort.asciidoc[] +
-include::251_abs.asciidoc[] +
-include::252_atexit.asciidoc[] +
-include::253_atof.asciidoc[] +
-include::254_atoi.asciidoc[] +
-include::255_atol.asciidoc[] +
-include::256_bsearch.asciidoc[] +
-include::257_calloc.asciidoc[] +
-include::258_div.asciidoc[] +
-include::259_ldiv.asciidoc[] +
-include::260_exit.asciidoc[] +
-include::261_free.asciidoc[] +
-include::262_getenv.asciidoc[] +
-include::263_labs.asciidoc[] +
-include::264_malloc.asciidoc[] +
-include::265_mblen.asciidoc[] +
-include::266_mbstowcs.asciidoc[] +
-include::267_mbtowc.asciidoc[] +
-include::268_qsort.asciidoc[] +
-include::269_rand.asciidoc[] +
-include::270_realloc.asciidoc[] +
-include::271_srand.asciidoc[] +
-include::272_strtod.asciidoc[] +
-include::273_strtol.asciidoc[] +
-include::274_strtoul.asciidoc[] +
-include::275_system.asciidoc[] +
-include::276_wcstombs.asciidoc[] +
-include::277_wctomb.asciidoc[] 
+link:249_stdlib_summary.asciidoc[]
+link:250_abort.asciidoc[]
+link:251_abs.asciidoc[]
+link:252_atexit.asciidoc[]
+link:253_atof.asciidoc[]
+link:254_atoi.asciidoc[]
+link:255_atol.asciidoc[]
+link:256_bsearch.asciidoc[]
+link:257_calloc.asciidoc[]
+link:258_div.asciidoc[]
+link:259_ldiv.asciidoc[]
+link:260_exit.asciidoc[]
+link:261_free.asciidoc[]
+link:262_getenv.asciidoc[]
+link:263_labs.asciidoc[]
+link:264_malloc.asciidoc[]
+link:265_mblen.asciidoc[]
+link:266_mbstowcs.asciidoc[]
+link:267_mbtowc.asciidoc[]
+link:268_qsort.asciidoc[]
+link:269_rand.asciidoc[]
+link:270_realloc.asciidoc[]
+link:271_srand.asciidoc[]
+link:272_strtod.asciidoc[]
+link:273_strtol.asciidoc[]
+link:274_strtoul.asciidoc[]
+link:275_system.asciidoc[]
+link:276_wcstombs.asciidoc[]
+link:277_wctomb.asciidoc[]
 
 string.h
 --------
-include::300_memchr.asciidoc[] +
-include::301_memcmp.asciidoc[] +
-include::302_memcpy.asciidoc[] +
-include::303_memmove.asciidoc[] +
-include::304_memset.asciidoc[] +
-include::305_strcat.asciidoc[] +
-include::306_strchr.asciidoc[] +
-include::307_strcmp.asciidoc[] +
-include::308_strcoll.asciidoc[] +
-include::309_strcpy.asciidoc[] +
-include::310_strcspn.asciidoc[] +
-include::311_strerror.asciidoc[] +
-include::312_strlen.asciidoc[] +
-include::313_strncat.asciidoc[] +
-include::314_strncmp.asciidoc[] +
-include::315_strncpy.asciidoc[] +
-include::316_strpbrk.asciidoc[] +
-include::317_strrchr.asciidoc[] +
-include::318_strspn.asciidoc[] +
-include::319_strstr.asciidoc[] +
-include::320_strtok.asciidoc[] +
-include::321_strxfrm.asciidoc[] 
+link:300_memchr.asciidoc[]
+link:301_memcmp.asciidoc[]
+link:302_memcpy.asciidoc[]
+link:303_memmove.asciidoc[]
+link:304_memset.asciidoc[]
+link:305_strcat.asciidoc[]
+link:306_strchr.asciidoc[]
+link:307_strcmp.asciidoc[]
+link:308_strcoll.asciidoc[]
+link:309_strcpy.asciidoc[]
+link:310_strcspn.asciidoc[]
+link:311_strerror.asciidoc[]
+link:312_strlen.asciidoc[]
+link:313_strncat.asciidoc[]
+link:314_strncmp.asciidoc[]
+link:315_strncpy.asciidoc[]
+link:316_strpbrk.asciidoc[]
+link:317_strrchr.asciidoc[]
+link:318_strspn.asciidoc[]
+link:319_strstr.asciidoc[]
+link:320_strtok.asciidoc[]
+link:321_strxfrm.asciidoc[]
 
 time.h
 ------
-include::349_time_summary.asciidoc[] +
-include::350_asctime.asciidoc[] +
-include::351_clock.asciidoc[] +
-include::352_ctime.asciidoc[] +
-include::353_difftime.asciidoc[] +
-include::354_gmtime.asciidoc[] +
-include::355_localtime.asciidoc[] +
-include::356_mktime.asciidoc[] +
-include::357_strftime.asciidoc[] +
-include::358_time.asciidoc[] +
-include::500_ascii-table.asciidoc[] 
+link:349_time_summary.asciidoc[]
+link:350_asctime.asciidoc[]
+link:351_clock.asciidoc[]
+link:352_ctime.asciidoc[]
+link:353_difftime.asciidoc[]
+link:354_gmtime.asciidoc[]
+link:355_localtime.asciidoc[]
+link:356_mktime.asciidoc[]
+link:357_strftime.asciidoc[]
+link:358_time.asciidoc[]
+link:500_ascii-table.asciidoc[]
